Sample_YAML/Namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: contrail-demo
  labels:
    project: contrail
