Sample_YAML/Policy-Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: policy-namespace
  annotations:
    net.beta.kubernetes.io/network-policy: |
      {
        "ingress": {
          "isolation": "DefaultDeny"
        }
      }
