Sample_YAML/isolated-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: "isolated-ns"
 annotations: {
       "opencontrail.org/isolation" : "true",
 }
