Sample_YAML/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  containers:
    - name: sample-app
      image: ubuntu-upstart
