Sample_YAML/mysql-net-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-app
  namespace: policy-namespace
  labels:
    app: mysql-app
spec:
  containers:
    - name: mysql-app
      image: ubuntu-upstart
