Sample_YAML/redis_isolated-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-app-isolated
  namespace: isolated-ns
  labels:
    app: redis-app-isolated
spec:
  containers:
    - name: redis-app-isolated
      image: ubuntu-upstart
