Sample_YAML/contrail-frontend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: contrail-frontend-svc
spec:
  selector:
    app: contrail-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
