Sample_YAML/contrail-frontend-single-svc-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-service-ingress
spec:
  backend:
    serviceName: contrail-frontend-svc
    servicePort: 80
