Sample_YAML/Network-Policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: contrail-policy
 namespace: policy-namespace
spec:
 podSelector:
  matchLabels:
    app: mysql-app
 ingress:
  - from:
     - podSelector:
        matchLabels:
         app: mongo-app
    ports:
